Managed/VFS/Internal/Generated/VfsNativeGenerated.g.cs

// Auto-generated by csharp-binding-generator. Do not edit by hand.
using System;
using System.Runtime.InteropServices;

namespace Luna.VFS.Internal;

internal static partial class VfsNativeGenerated
{
    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_init_module", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr InitModule();

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_mount", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr Mount([MarshalAs(UnmanagedType.LPUTF8Str)] string driver, [MarshalAs(UnmanagedType.LPUTF8Str)] string driverPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string mountPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_unmount", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr Unmount([MarshalAs(UnmanagedType.LPUTF8Str)] string mountPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_remount", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr Remount([MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_open_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr OpenFile([MarshalAs(UnmanagedType.LPUTF8Str)] string path, uint flags, uint creation, out global::Luna.Runtime.Internal.NativeFileHandle outFile);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_get_file_attribute", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetFileAttribute([MarshalAs(UnmanagedType.LPUTF8Str)] string path, out global::Luna.Runtime.FileAttribute outAttribute);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_copy_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr CopyFile([MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_move_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr MoveFile([MarshalAs(UnmanagedType.LPUTF8Str)] string fromPath, [MarshalAs(UnmanagedType.LPUTF8Str)] string toPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_delete_file", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr DeleteFile([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_open_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr OpenDir([MarshalAs(UnmanagedType.LPUTF8Str)] string path, out global::Luna.Runtime.Internal.NativeFileIteratorHandle outIterator);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_create_dir", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr CreateDir([MarshalAs(UnmanagedType.LPUTF8Str)] string path);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_get_native_path", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetNativePath([MarshalAs(UnmanagedType.LPUTF8Str)] string vfsPath, out IntPtr outPath);

    [DllImport("LunaVFSC", EntryPoint = "luna_vfs_get_platform_filesystem_driver", CallingConvention = CallingConvention.Cdecl)]
    internal static extern UIntPtr GetPlatformFilesystemDriver(out IntPtr outName);

}
